--- a/WebstiteBlocker/app/src/main/res/layout/activity_dashboard.xml
+++ b/WebstiteBlocker/app/src/main/res/layout/activity_dashboard.xml
@@ -193,4 +193,21 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bt_add_item"
+        android:layout_below="@id/tv_description"
+        android:layout_marginTop="10dp"
+        android:text="@string/whitelist_desp"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/bt_add_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"/>
+
 </RelativeLayout>
