--- a/WebstiteBlocker/app/src/main/res/layout/list_row_items.xml
+++ b/WebstiteBlocker/app/src/main/res/layout/list_row_items.xml
@@ -2,14 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="16sp"/>
+        android:text="name"
+        android:textSize="18sp"
+        android:visibility="gone"/>
+
+    <ImageButton
+        android:id="@+id/ib_remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_round_close_24"
+        android:background="@color/white"
+        android:visibility="gone"/>
+
 
 
 
